--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 
   "browser_action": {
     "default_icon": "icon.png",
-    "default_title": "Click here"
+    "default_title": "Get UW Books"
   },
 
   "background": {
